LC #124 - optimal solution